--- a/index.html
+++ b/index.html
@@ -42,11 +42,6 @@
                         el.style.display = 'none';
                     });
 
-                    // Zorg ervoor dat de start- en stopknoppen zichtbaar blijven in de 'display' modus
-                    document.querySelectorAll("#startBtn, #stopBtn").forEach(el => {
-                        el.style.display = 'inline-block';  // Zorg ervoor dat de knoppen zichtbaar blijven
-                    });
-
                     document.querySelectorAll(".timer").forEach((el) => {
                         el.style.pointerEvents = "none";
                     });
@@ -59,16 +54,6 @@
                     teamInputElements.forEach((el) => {
                         el.setAttribute("disabled", "true");
                     });
-
-                    // Speel het geluid alleen af in de display modus
-                    if (timerSound && finaleSound && timerEndSound) {
-                        timerSound.pause();  // Stop het geluid
-                        timerSound.currentTime = 0; // Zet het timer-geluid terug naar het begin
-                        finaleSound.pause(); // Stop het finale geluid
-                        finaleSound.currentTime = 0; // Zet het finale geluid terug naar het begin
-                        timerEndSound.pause(); // Stop het stop geluid
-                        timerEndSound.currentTime = 0; // Zet het stop geluid terug naar het begin
-                    }
 
                 } else {
                     const elementsToShow = document.querySelectorAll('.hide-if-needed');
@@ -139,26 +124,18 @@
                         updateDatabase();
                     } else if (timers[geselecteerdeTimer] === 0) {
                         // Timer is op 0, stop het timer-geluid en speel het finale geluid af
-                        const params = new URLSearchParams(window.location.search);
-                        const view = params.get('view');
-                        if (view === 'display') {
-                            timerSound.pause();  // Stop het timer-geluid
-                            timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
-                            finaleSound.play().catch((error) => {
-                                console.log("Finale geluid kon niet worden afgespeeld:", error);
-                            });
-                        }
+                        timerSound.pause();  // Stop het timer-geluid
+                        timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
+                        finaleSound.play().catch((error) => {
+                            console.log("Finale geluid kon niet worden afgespeeld:", error);
+                        });
                     }
                 }, 1000);
 
-                // Speel het geluid af wanneer de timer start, alleen in display modus
-                const params = new URLSearchParams(window.location.search);
-                const view = params.get('view');
-                if (view === 'display') {
-                    timerSound.play().catch((error) => {
-                        console.log("Audio kon niet worden afgespeeld:", error);
-                    });
-                }
+                // Speel het geluid af wanneer de timer start
+                timerSound.play().catch((error) => {
+                    console.log("Audio kon niet worden afgespeeld:", error);
+                });
             }
 
             // Stop de timer en stop het geluid, speel het stop geluid af
@@ -167,16 +144,13 @@
                 intervals[geselecteerdeTimer] = null;
 
                 // Stop het timer-geluid
-                const params = new URLSearchParams(window.location.search);
-                const view = params.get('view');
-                if (view === 'display') {
-                    timerSound.pause();  // Stop het timer-geluid
-                    timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
-                    // Speel het stop geluid af
-                    timerEndSound.play().catch((error) => {
-                        console.log("Stopgeluid kon niet worden afgespeeld:", error);
-                    });
-                }
+                timerSound.pause();  // Stop het timer-geluid
+                timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
+                
+                // Speel het stop geluid af
+                timerEndSound.play().catch((error) => {
+                    console.log("Stopgeluid kon niet worden afgespeeld:", error);
+                });
             }
 
             function resetTimer() {
