--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             // Audio elementen voor beide geluiden
             const timerSound = document.getElementById("timerSound");
             const timerEndSound = document.getElementById("timerEndSound");
-            const finaleSound = document.getElementById("finaleSound");
+            const finaleSound = document.getElementById("finaleSound");  // Het finale geluid
 
             function hideIfNeeded() {
                 const params = new URLSearchParams(window.location.search);
@@ -129,9 +129,6 @@
                         finaleSound.play().catch((error) => {
                             console.log("Finale geluid kon niet worden afgespeeld:", error);
                         });
-
-                        // Sync het stoppen van het geluid via Firebase
-                        firebase.database().ref('audioStatus').set('stopped');
                     }
                 }, 1000);
 
@@ -139,9 +136,6 @@
                 timerSound.play().catch((error) => {
                     console.log("Audio kon niet worden afgespeeld:", error);
                 });
-
-                // Sync het starten van het geluid via Firebase
-                firebase.database().ref('audioStatus').set('playing');
             }
 
             // Stop de timer en stop het geluid, speel het stop geluid af
@@ -157,9 +151,6 @@
                 timerEndSound.play().catch((error) => {
                     console.log("Stopgeluid kon niet worden afgespeeld:", error);
                 });
-
-                // Sync het stoppen van het geluid via Firebase
-                firebase.database().ref('audioStatus').set('stopped');
             }
 
             function resetTimer() {
@@ -274,22 +265,15 @@
                         selecteerTimer(selectedTimer);
                     }
                 });
+            }
 
-                const audioStatusRef = firebase.database().ref('audioStatus');
-                audioStatusRef.on('value', (snapshot) => {
-                    const status = snapshot.val();
-                    if (status === 'playing') {
-                        // Start het geluid als het in een andere browser is gestart
-                        timerSound.play().catch((error) => {
-                            console.log("Audio kon niet worden afgespeeld:", error);
-                        });
-                    } else if (status === 'stopped') {
-                        // Stop het geluid als het in een andere browser is gestopt
-                        timerSound.pause();
-                        timerSound.currentTime = 0;
-                        finaleSound.play().catch((error) => {
-                            console.log("Finale geluid kon niet worden afgespeeld:", error);
-                        });
+            function syncVisibility() {
+                const visibilityRef = firebase.database().ref('timerVisibility');
+                visibilityRef.on('value', (snapshot) => {
+                    const data = snapshot.val();
+                    if (data) {
+                        zichtbareTimers = [data.timer1, data.timer2, data.timer3, data.timer4];
+                        updateWeergave();
                     }
                 });
             }
@@ -338,18 +322,11 @@
                         });
                     }
                 });
-
-                // Voeg de audioStatus toe in Firebase
-                const audioStatusRef = firebase.database().ref('audioStatus');
-                audioStatusRef.once('value', (snapshot) => {
-                    if (!snapshot.exists()) {
-                        audioStatusRef.set('stopped');
-                    }
-                });
             }
 
             checkAndInitializeDatabase();
             syncTimers();
+            syncVisibility();  // Voeg deze regel toe
 
             document.querySelectorAll(".timer").forEach((el, index) => {
                 el.addEventListener("click", () => selecteerTimer(index));
@@ -359,13 +336,7 @@
                 selecteerTimer(parseInt(event.target.value));
             });
 
-            // Voeg hier de setTimeout toe om het geluid niet te blokkeren
-            document.getElementById("startBtn").addEventListener("click", () => {
-                setTimeout(() => {
-                    startTimer();
-                }, 100);  // Wacht 100 milliseconden
-            });
-
+            document.getElementById("startBtn").addEventListener("click", startTimer);
             document.getElementById("stopBtn").addEventListener("click", stopTimer);
             document.getElementById("resetBtn").addEventListener("click", resetTimer);
             document.getElementById("toggleBtn").addEventListener("click", toggleTimerZichtbaarheid);
