--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             let geselecteerdeTimer = 0;
             let zichtbareTimers = [true, true, true, true];
 
-            // Audio elementen voor de geluiden
+            // Audio elementen voor beide geluiden
             const timerSound = document.getElementById("timerSound");
             const timerEndSound = document.getElementById("timerEndSound");
             const finaleSound = document.getElementById("finaleSound");  // Het finale geluid
@@ -129,14 +129,6 @@
                         finaleSound.play().catch((error) => {
                             console.log("Finale geluid kon niet worden afgespeeld:", error);
                         });
-
-                        // Synchroniseer het finale geluid in Firebase
-                        const finaleSoundRef = firebase.database().ref('finaleSoundPlaying');
-                        finaleSoundRef.set(true);
-
-                        // Synchroniseer het stopgeluid in Firebase
-                        const endSoundRef = firebase.database().ref('timerEndSoundPlaying');
-                        endSoundRef.set(true);
                     }
                 }, 1000);
 
@@ -165,8 +157,8 @@
                 });
 
                 // Synchroniseer de stopgeluid in Firebase
-                const endSoundRef = firebase.database().ref('timerEndSoundPlaying');
-                endSoundRef.set(true);
+                const soundRef = firebase.database().ref('timerSoundPlaying');
+                soundRef.set(false);
             }
 
             function resetTimer() {
@@ -307,32 +299,6 @@
                         timerSound.currentTime = 0;
                     }
                 });
-
-                const endSoundRef = firebase.database().ref('timerEndSoundPlaying');
-                endSoundRef.on('value', (snapshot) => {
-                    const endSoundPlaying = snapshot.val();
-                    if (endSoundPlaying) {
-                        timerEndSound.play().catch((error) => {
-                            console.log("Stopgeluid kon niet worden afgespeeld:", error);
-                        });
-                    } else {
-                        timerEndSound.pause();
-                        timerEndSound.currentTime = 0;
-                    }
-                });
-
-                const finaleSoundRef = firebase.database().ref('finaleSoundPlaying');
-                finaleSoundRef.on('value', (snapshot) => {
-                    const finaleSoundPlaying = snapshot.val();
-                    if (finaleSoundPlaying) {
-                        finaleSound.play().catch((error) => {
-                            console.log("Finale geluid kon niet worden afgespeeld:", error);
-                        });
-                    } else {
-                        finaleSound.pause();
-                        finaleSound.currentTime = 0;
-                    }
-                });
             }
 
             function checkAndInitializeDatabase() {
@@ -380,25 +346,11 @@
                     }
                 });
 
-                // Voeg de timerSoundPlaying, timerEndSoundPlaying en finaleSoundPlaying toe in Firebase
+                // Voeg de timerSoundPlaying toe in Firebase
                 const soundRef = firebase.database().ref('timerSoundPlaying');
                 soundRef.once('value', (snapshot) => {
                     if (!snapshot.exists()) {
                         soundRef.set(false); // Initialiseer de waarde als "false"
-                    }
-                });
-
-                const endSoundRef = firebase.database().ref('timerEndSoundPlaying');
-                endSoundRef.once('value', (snapshot) => {
-                    if (!snapshot.exists()) {
-                        endSoundRef.set(false); // Initialiseer de waarde als "false"
-                    }
-                });
-
-                const finaleSoundRef = firebase.database().ref('finaleSoundPlaying');
-                finaleSoundRef.once('value', (snapshot) => {
-                    if (!snapshot.exists()) {
-                        finaleSoundRef.set(false); // Initialiseer de waarde als "false"
                     }
                 });
             }
