--- a/index.html
+++ b/index.html
@@ -305,6 +305,27 @@
                         timerSound.currentTime = 0;
                     }
                 });
+
+                const endSoundRef = firebase.database().ref('timerEndSoundPlaying');
+                endSoundRef.on('value', (snapshot) => {
+                    const soundPlaying = snapshot.val();
+                    if (soundPlaying) {
+                        timerEndSound.play().catch((error) => {
+                            console.log("Stopgeluid kon niet worden afgespeeld:", error);
+                        });
+                    }
+                });
+
+                const finaleSoundRef = firebase.database().ref('finaleSoundPlaying');
+                finaleSoundRef.on('value', (snapshot) => {
+                    const soundPlaying = snapshot.val();
+                    if (soundPlaying && !finaleSoundPlayed) {
+                        finaleSound.play().catch((error) => {
+                            console.log("Finale geluid kon niet worden afgespeeld:", error);
+                        });
+                        finaleSoundPlayed = true;
+                    }
+                });
             }
 
             function checkAndInitializeDatabase() {
@@ -352,11 +373,25 @@
                     }
                 });
 
-                // Voeg de timerSoundPlaying toe in Firebase
+                // Voeg de timerSoundPlaying, timerEndSoundPlaying en finaleSoundPlaying toe in Firebase
                 const soundRef = firebase.database().ref('timerSoundPlaying');
                 soundRef.once('value', (snapshot) => {
                     if (!snapshot.exists()) {
                         soundRef.set(false); // Initialiseer de waarde als "false"
+                    }
+                });
+
+                const endSoundRef = firebase.database().ref('timerEndSoundPlaying');
+                endSoundRef.once('value', (snapshot) => {
+                    if (!snapshot.exists()) {
+                        endSoundRef.set(false); // Initialiseer de waarde als "false"
+                    }
+                });
+
+                const finaleSoundRef = firebase.database().ref('finaleSoundPlaying');
+                finaleSoundRef.once('value', (snapshot) => {
+                    if (!snapshot.exists()) {
+                        finaleSoundRef.set(false); // Initialiseer de waarde als "false"
                     }
                 });
             }
