--- a/index.html
+++ b/index.html
@@ -127,25 +127,13 @@
                         updateDatabase();
                     } else if (timers[geselecteerdeTimer] === 0) {
                         // Timer is op 0, stop het timer-geluid en speel het finale geluid af
-                        timerSound.pause();  // Stop het timer-geluid
-                        timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
-                        if (!finaleSoundPlayed) {
-                            finaleSound.play().catch((error) => {
-                                console.log("Finale geluid kon niet worden afgespeeld:", error);
-                            });
-                            finaleSoundPlayed = true;  // Markeer dat het finale geluid is afgespeeld
-                        }
+                        firebase.database().ref('timerSoundPlaying').set(false);  // Stop timer sound
+                        firebase.database().ref('finaleSoundPlaying').set(true);  // Start finale sound
                     }
                 }, 1000);
 
                 // Speel het geluid af wanneer de timer start
-                timerSound.play().catch((error) => {
-                    console.log("Audio kon niet worden afgespeeld:", error);
-                });
-
-                // Synchroniseer het geluid in Firebase
-                const soundRef = firebase.database().ref('timerSoundPlaying');
-                soundRef.set(true);
+                firebase.database().ref('timerSoundPlaying').set(true);  // Start timer sound
             }
 
             // Stop de timer en stop het geluid, speel het stop geluid af
@@ -154,17 +142,8 @@
                 intervals[geselecteerdeTimer] = null;
 
                 // Stop het timer-geluid
-                timerSound.pause();  // Stop het timer-geluid
-                timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
-                
-                // Speel het stop geluid af
-                timerEndSound.play().catch((error) => {
-                    console.log("Stopgeluid kon niet worden afgespeeld:", error);
-                });
-
-                // Synchroniseer de stopgeluid in Firebase
-                const soundRef = firebase.database().ref('timerSoundPlaying');
-                soundRef.set(false);
+                firebase.database().ref('timerSoundPlaying').set(false);  // Stop timer sound
+                firebase.database().ref('timerEndSoundPlaying').set(true);  // Start end sound
             }
 
             function resetTimer() {
@@ -319,11 +298,10 @@
                 const finaleSoundRef = firebase.database().ref('finaleSoundPlaying');
                 finaleSoundRef.on('value', (snapshot) => {
                     const soundPlaying = snapshot.val();
-                    if (soundPlaying && !finaleSoundPlayed) {
+                    if (soundPlaying) {
                         finaleSound.play().catch((error) => {
                             console.log("Finale geluid kon niet worden afgespeeld:", error);
                         });
-                        finaleSoundPlayed = true;
                     }
                 });
             }
