--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             // Audio elementen voor de geluiden
             const timerSound = document.getElementById("timerSound");
             const timerEndSound = document.getElementById("timerEndSound");
-            const finaleSound = document.getElementById("finaleSound");  // Het finale geluid
+            const finaleSound = document.getElementById("finaleSound");
 
             // Vlag om te controleren of het finale geluid al is afgespeeld
             let finaleSoundPlayed = false;
